# aio-translator

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust-clippy.yml
crates/aio-translator/: Cargo.toml
crates/aio-translator/src/: lib.rs  style_transfer.rs
crates/api/baidu/: Cargo.toml
crates/api/baidu/src/: lib.rs
crates/api/caiyun/: Cargo.toml
crates/api/caiyun/src/: lib.rs
crates/api/chatgpt/: Cargo.toml
crates/api/deepl/: Cargo.toml
crates/api/deepl/src/: lib.rs
crates/api/deepseek/: Cargo.toml
crates/api/gemini/: Cargo.toml
crates/api/google/: Cargo.toml
crates/api/google/src/: lib.rs
crates/api/groq/: Cargo.toml
crates/api/mymemory/: Cargo.toml
crates/api/mymemory/src/: lib.rs
crates/api/youdao/: Cargo.toml
crates/api/youdao/src/: lib.rs
crates/detector/langid/: Cargo.toml
crates/detector/langid/src/: lib.rs
crates/detector/lingua/: Cargo.toml
crates/detector/lingua/src/: lib.rs
crates/detector/whatlang/: Cargo.toml
crates/detector/whatlang/src/: lib.rs
crates/dummy/none/: Cargo.toml
crates/dummy/none/src/: lib.rs
crates/dummy/original/: Cargo.toml
crates/dummy/original/src/: lib.rs
crates/interface/: Cargo.toml
crates/interface/src/: error.rs  generate.rs  lib.rs  prompt.rs  tokenizer.rs
crates/lang-generator/: Cargo.toml
crates/lang-generator/src/: iso639.rs  lib.rs
crates/offline/jparacrawl/: Cargo.toml
crates/offline/jparacrawl/src/: lib.rs
crates/offline/m2m100/: Cargo.toml
crates/offline/m2m100/src/: lib.rs
crates/offline/mbart50/: Cargo.toml
crates/offline/mbart50/src/: lib.rs
crates/offline/nllb/: Cargo.toml
crates/offline/nllb/src/: lib.rs
crates/offline/qwen2/: Cargo.toml
crates/offline/qwen2/src/: main.rs
crates/offline/sugoi/: Cargo.toml
crates/offline/sugoi/src/: lib.rs
crates/scrape/papago/: Cargo.toml
crates/scrape/papago/src/: lib.rs
