[workspace]
resolver = "2"
members = [
    "crates/api/baidu",
    "crates/api/caiyun",
    "crates/api/chatgpt",
    "crates/api/deepl",
    "crates/api/deepseek",
    "crates/api/gemini",
    "crates/api/google",
    "crates/api/groq",
    "crates/api/mymemory",
    "crates/scrape/papago",
    "crates/api/youdao",
    "crates/dummy/none",
    "crates/dummy/original",
    "crates/interface",
    "crates/lang-generator",
    "crates/offline/jparacrawl",
    "crates/offline/m2m100",
    "crates/offline/mbart50",
    "crates/offline/nllb",
    "crates/offline/sugoi",
    "crates/offline/qwen2",
    "crates/aio-translator",
    "crates/detector/langid",
    "crates/detector/whatlang",
    "crates/detector/lingua",
]

[workspace.package]
edition = "2024"
version = "1.0.0"

[workspace.dependencies]
interface-model = { git = "https://github.com/frederik-uni/manga-image-translator-rust", branch = "master", default-features = false }
base-util = { git = "https://github.com/frederik-uni/manga-image-translator-rust", branch = "master", default-features = false }
reqwest = "0.12.22"
anyhow = "1.0.98"
tokio = "1.47"
scraper = "0.23.1"
lang-generator = { path = "crates/lang-generator" }
interface = { path = "crates/interface" }
jparacrawl = { path = "crates/offline/jparacrawl" }
m2m100 = { path = "crates/offline/m2m100" }
nllb = { path = "crates/offline/nllb" }
sugoi = { path = "crates/offline/sugoi" }
none = { path = "crates/dummy/none" }
original = { path = "crates/dummy/original" }
langid = { path = "crates/detector/langid" }
whatlang = { path = "crates/detector/whatlang" }
lingua = { path = "crates/detector/lingua" }
deepl = { path = "crates/api/deepl" }
papago = { path = "crates/scrape/papago" }
mymemory = { path = "crates/api/mymemory" }
caiyun = { path = "crates/api/caiyun" }
google = { path = "crates/api/google" }
baidu = { path = "crates/api/baidu" }
youdao = { path = "crates/api/youdao" }
serde_json = "1.0"
serde = "1.0.219"
md5 = "0.8.0"
thiserror = "2.0.12"
async-trait = "0.1.88"
zip = "4.3.0"
ct2rs = { git = "https://github.com/frederik-uni/ctranslate2-rs", default-features = false }
maplit = "1.0.2"
bytemuck = "1.23.1"
env_logger = "0.11.8"
heck = "0.5.0"
regex = "1.11.1"
rust_tokenizers = "8.1.1"
lingua-rs = { package = "lingua", version = "1.7.2" }
whatlang-rs = { package = "whatlang", version = "0.16.4" }
langid-rs = "1.0.2"
tokenizers = "0.21"
hmac = "0.12.1"
base64 = "0.22.1"
serde_urlencoded = "0.7.1"
uuid = "1.17.0"
md-5 = "0.10.6"
dotenv = "0.15.0"
hex = "0.4.3"
rand = "0.9.2"
sha2 = "0.10.9"
arabic_reshaper = "0.4.2"
fancy-regex = "0.16.1"
