[package]
name = "aio-translator"
edition.workspace = true
version.workspace = true

[dependencies]
aio-translator-none.workspace = true
aio-translator-original.workspace = true
aio-translator-jparacrawl.workspace = true
aio-translator-m2m100.workspace = true
aio-translator-nllb.workspace = true
aio-translator-sugoi.workspace = true
aio-translator-interface.workspace = true
aio-translator-lingua = { workspace = true, optional = true }
aio-translator-whatlang = { workspace = true, optional = true }
aio-translator-langid.workspace = true
aio-translator-deepl.workspace = true
aio-translator-papago.workspace = true
aio-translator-mymemory.workspace = true
aio-translator-google.workspace = true
aio-translator-caiyun.workspace = true
aio-translator-baidu.workspace = true
aio-translator-mbart50.workspace = true
aio-translator-youdao.workspace = true
fancy-regex.workspace = true
arabic_reshaper.workspace = true
unicode-general-category = "1.0.0"
async-trait.workspace = true
ct2rs = { workspace = true, default-features = false, features = ["vendored"] }

[features]
lingua = ["dep:aio-translator-lingua"]
whatlang = ["dep:aio-translator-whatlang"]
