[package]
name = "lang-generator"
edition.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
heck.workspace = true
iso-639 = "0.1.0"
serde_json.workspace = true
rust_iso639 = "0.0.3"
