[package]
name = "aio-translator-caiyun"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
aio-translator-interface = { workspace = true }
async-trait.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
dotenv.workspace = true
