[package]
name = "aio-translator-deepl"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
aio-translator-interface.workspace = true
reqwest = { workspace = true, features = ["json"] }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
dotenv.workspace = true
