[package]
name = "google"
edition.workspace = true
version.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
interface.workspace = true
async-trait.workspace = true
[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
dotenv.workspace = true
