[package]
name = "aio-translator-google"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
aio-translator-interface.workspace = true
async-trait.workspace = true
[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
dotenv.workspace = true
