[package]
name = "aio-translator-mymemory"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
scraper.workspace = true
aio-translator-interface.workspace = true
async-trait.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
dotenv.workspace = true
scraper.workspace = true
