[package]
name = "youdao"
edition.workspace = true
version.workspace = true

[dependencies]
interface.workspace = true
reqwest = { workspace = true, features = ["json"] }
async-trait.workspace = true
uuid = { workspace = true, features = ["v1"] }
sha2.workspace = true
hex.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
dotenv.workspace = true
