[package]
name = "aio-translator-youdao"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
aio-translator-interface.workspace = true
reqwest = { workspace = true, features = ["json"] }
async-trait.workspace = true
uuid = { workspace = true, features = ["v1"] }
sha2.workspace = true
hex.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
dotenv.workspace = true
