[package]
name = "aio-translator-mbart50"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
aio-translator-interface.workspace = true
ct2rs = { workspace = true, default-features = false }
interface-model = { workspace = true, default-features = false }
base-util = { workspace = true, default-features = false }
maplit.workspace = true
env_logger.workspace = true
anyhow.workspace = true
