[package]
name = "aio-translator-qwen2"
edition.workspace = true
version.workspace = true

[dependencies]
ct2rs = { workspace = true, default-features = false }
aio-translator-interface.workspace = true
interface-model = { workspace = true, default-features = false }
base-util = { workspace = true, default-features = false }
maplit.workspace = true
env_logger.workspace = true
tokenizers.workspace = true
anyhow.workspace = true
