[package]
name = "aio-translator-papago"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
base64.workspace = true
hmac.workspace = true
md-5.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
aio-translator-interface.workspace = true
uuid = { workspace = true, features = ["v4"] }
async-trait.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
